# credit-default-scorecard

./: .gitignore  LICENSE  MODEL_DOC.md  README.md  pyproject.toml  requirements.in  requirements.txt
app/: scorecard_app.html  scorecard_app.py
docs/: data_sources.md  lending_club_extension.md  phase_0_scope.md  regulatory_context.md  streamlit_demo.md
notebooks/: 01_eda.ipynb
reports/: bin_diagnostics_summary.md  binning_summary.md  binning_tables.csv  calibration_comparison.csv  calibration_summary.md  calibration_table.csv  challenger_comparison.csv  challenger_summary.md  cleaning_decisions.md  cleaning_metadata.json  data_dictionary.csv  data_quality_findings.md  data_quality_summary.csv  explainability_summary.md  feature_selection_decisions.csv  iv_ranking.csv  model_coefficients.csv  model_summary.md  psi_summary.csv  rank_ordering_table.csv  reason_codes_examples.csv  scorecard_points.csv  scorecard_summary.md  sentinel_value_counts.csv  shap_global_importance.csv  target_summary.csv  validation_confidence_intervals.csv  validation_metrics.csv  validation_summary.md  vif_report.csv
src/: __init__.py  binning.py  calibration.py  challenger.py  config.py  data_prep.py  diagnostics.py  eda.py  explainability.py  export_static_app.py  fetch_data.py  lending_club_adapter.py  model.py  run_pipeline.py  scorecard.py  scoring.py  validation.py
tests/: test_project_outputs.py
